fix alignment

--- a/app/assets/stylesheets/checkins.css.scss
+++ b/app/assets/stylesheets/checkins.css.scss
@@ -14,10 +14,14 @@
       border-radius: 15px;
       .status {
         position: absolute;
-        top: 8px;
+        top: 10px;
         width: 98%;
         margin-left:auto;
         margin-right:auto;
+        .btn {
+          float: none;
+          margin: -2px;
+        }
       }
       .team {
         height: 55px;
